--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Validador de Delimitadores</h1>
     <textarea id="expression" placeholder="Ingresa una expresión..."></textarea>
     <button onclick="validarDelimitadores()">Validar</button>
-    <div class="result" id="resultado"></div>
+    <div></div>
   </div>
 
 <script src="script.js"></script>
